[PR-1] - Added last changes

--- a/index.html
+++ b/index.html
@@ -12,33 +12,91 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
 
   <body>
     <!--Erkin Hero Section START-->
     <div class="homepage-hero-section">
-      <div class="hero-section-container">
-        <img class="hes-header-logo" src="images/logo.png" alt="" />
-        <div class="hes-navbar">
-          <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li>
-              <a href="">Services</a>
-              <div class="hes-dropdown-menu">
-                <img src="images/popup-cloud.png" alt="" />
-                <ul>
-                  <li><a href="">Honeymoon Packages</a></li>
-                  <li><a href="">Tours Packages</a></li>
-                  <li><a href="">Musical Events</a></li>
-                  <li><a href="">Build Package</a></li>
-                </ul>
-              </div>
-            </li>
-            <li><a href="">Upcomming Packages</a></li>
-          </ul>
+      <div class="hero-section">
+        <div class="hero-section-container">
+          <img class="hes-header-logo" src="images/logo.png" alt="" />
+          <div class="hes-navbar">
+            <ul>
+              <li><a href="">Home</a></li>
+              <li><a href="">About</a></li>
+              <li>
+                <a href="">Services <i class="fa-solid fa-caret-down"></i></a>
+                <div class="hes-dropdown-menu">
+                  <img src="images/popup-cloud.png" alt="" />
+                  <ul>
+                    <li><a href="">Honeymoon Packages</a></li>
+                    <li><a href="">Tours Packages</a></li>
+                    <li><a href="">Musical Events</a></li>
+                    <li><a href="">Build Package</a></li>
+                  </ul>
+                </div>
+              </li>
+              <li><a href="">Upcomming Packages</a></li>
+            </ul>
+          </div>
+          <button class="hes-button">Get in Touch</button>
         </div>
-        <button class="hes-button">Get in Touch</button>
+        <div class="hes-title-box">
+          <img src="images/Vector-1.png" alt="" />
+          <h2>No matter where you're going to, we'll take you there</h2>
+          <div class="hes-input-box">
+            <div class="hes-select-box">
+              <input class="hes-input" type="text" placeholder="Where to?" />
+              <img src="images/line.png" alt="" />
+              <select class="hes-input">
+                <option value="">Travel Type</option>
+                <option value="Honeymoon Vacation">Honeymoon Vacation</option>
+                <option value="Musical Events">Musical Events</option>
+              </select>
+              <img src="images/line001.png" alt="" />
+              <select class="hes-input">
+                <option value="">Duration</option>
+                <option value="One Day">One Day</option>
+                <option value="Two Day">Two Day</option>
+              </select>
+              <button><a href="">Submit</a></button>
+            </div>
+            <div class="hes-little-imgs">
+              <img style="left: 50px" src="images/user-avatar2.png" alt="" />
+              <img style="left: 75px" src="images/user-avatar3.png" alt="" />
+              <img style="left: 100px" src="images/user-avatar4.png" alt="" />
+              <img style="left: 125px" src="images/user-avatar1.png" alt="" />
+              <img style="left: 150px" src="images/user-avatar5.png" alt="" />
+              <img style="left: 175px" src="images/user-avatar6.png" alt="" />
+              <img
+                style="left: 200px"
+                src="images/user-avatar-emty.png"
+                alt=""
+              />
+              <img
+                style="left: 200px; z-index: 1; padding: 15px"
+                src="images/plus.png"
+                alt=""
+              />
+              <h6>2,500 people booked Tomorrowland Event in last 24 Hours</h6>
+            </div>
+          </div>
+        </div>
+        <div class="hes-scroll-png">
+          <img src="images/scroll.png" alt="" />
+        </div>
+        <div class="hes-little-lines">
+          <img src="images/Rectangle 19293.png" alt="" />
+          <img src="images/Rectangle 19291.png" alt="" />
+          <img src="images/Rectangle 19293.png" alt="" />
+        </div>
       </div>
     </div>
     <!-- Erkin Hero Section END-->
