--- a/about.html
+++ b/about.html
@@ -4,10 +4,41 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tour and Travel About</title>
-    <link rel="stylesheet" href="styles/about.css">
-    <link rel="stylesheet" href="styles/shared.css">
+    <link rel="stylesheet" href="styles/about.css" />
+    <link rel="stylesheet" href="styles/shared.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    
+    <!-- Erkin About Promotion Start-->
+    <div class="about-promotion">
+      <div class="about-promotion-container">
+        <div class="pro-title-box">
+          <h6>Promotion</h6>
+          <h2>
+            We Provide You Best <br />
+            Europe Sightseeing Tours
+          </h2>
+          <p>
+            Et labore harum non nobis ipsum eum molestias mollitia et corporis
+            <br />
+            praesentium a laudantium internos. Non quis eius quo eligendi
+            corrupti
+            <br />
+            et fugiat nulla qui soluta recusandae in maxime quasi aut ducimus<br />
+            illum aut optio quibusdam!
+          </p>
+          <button><a href="">View Packages</a></button>
+        </div>
+        <div class="pro-img">
+          <img src="images/about/about-context-img01.png" alt="" />
+        </div>
+      </div>
+    </div>
+    <!-- Erkin About Promotion End-->
   </body>
 </html>
