[PR-1] - Before navbar responsive

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       <div class="hero-section">
         <div class="hero-section-container">
           <img class="hes-header-logo" src="images/logo.png" alt="" />
-          <div class="hes-navbar">
-            <ul>
-              <li><a href="">Home</a></li>
-              <li><a href="">About</a></li>
-              <li>
-                <a href="">Services <i class="fa-solid fa-caret-down"></i></a>
+          <ul class="hes-navbar">
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li>
+              <a href=""
+                >Services <i class="fa-solid fa-caret-down"></i>
                 <div class="hes-dropdown-menu">
                   <img src="images/popup-cloud.png" alt="" />
                   <ul>
@@ -42,60 +42,79 @@
                     <li><a href="">Build Package</a></li>
                   </ul>
                 </div>
-              </li>
-              <li><a href="">Upcomming Packages</a></li>
-            </ul>
-          </div>
+              </a>
+            </li>
+            <li><a href="">Upcomming Packages</a></li>
+          </ul>
           <button class="hes-button">Get in Touch</button>
         </div>
+        
+        
+      </div>
         <div class="hes-title-box">
-          <img src="images/Vector-1.png" alt="" />
+          <div style="width: fit-content">
+            <img src="images/Vector-1.png" alt="" />
+          </div>
           <h2>No matter where you're going to, we'll take you there</h2>
-          <div class="hes-input-box">
-            <div class="hes-select-box">
-              <input class="hes-input" type="text" placeholder="Where to?" />
-              <img src="images/line.png" alt="" />
-              <select class="hes-input">
-                <option value="">Travel Type</option>
-                <option value="Honeymoon Vacation">Honeymoon Vacation</option>
-                <option value="Musical Events">Musical Events</option>
-              </select>
-              <img src="images/line001.png" alt="" />
-              <select class="hes-input">
-                <option value="">Duration</option>
-                <option value="One Day">One Day</option>
-                <option value="Two Day">Two Day</option>
-              </select>
-              <button><a href="">Submit</a></button>
-            </div>
-            <div class="hes-little-imgs">
-              <img style="left: 50px" src="images/user-avatar2.png" alt="" />
-              <img style="left: 75px" src="images/user-avatar3.png" alt="" />
-              <img style="left: 100px" src="images/user-avatar4.png" alt="" />
-              <img style="left: 125px" src="images/user-avatar1.png" alt="" />
-              <img style="left: 150px" src="images/user-avatar5.png" alt="" />
-              <img style="left: 175px" src="images/user-avatar6.png" alt="" />
+          <div class="hes-select-box">
+            <input class="hes-input" type="text" placeholder="Where to?" />
+            <img src="images/line.png" alt="" />
+            <select class="hes-input">
+              <option value="">Travel Type</option>
+              <option value="Honeymoon Vacation">Honeymoon Vacation</option>
+              <option value="Musical Events">Musical Events</option>
+            </select>
+            <img src="images/line001.png" alt="" />
+            <select class="hes-input">
+              <option value="">Duration</option>
+              <option value="One Day">One Day</option>
+              <option value="Two Day">Two Day</option>
+            </select>
+            <button><a href="">Submit</a></button>
+          </div>
+          <div class="hes-little-imgs">
+            <img
+              style="margin-left: -12px"
+              src="images/user-avatar2.png"
+              alt=""
+            />
+            <img
+              style="margin-left: -12px"
+              src="images/user-avatar3.png"
+              alt=""
+            />
+            <img
+              style="margin-left: -12px"
+              src="images/user-avatar4.png"
+              alt=""
+            />
+            <img
+              style="margin-left: -12px"
+              src="images/user-avatar1.png"
+              alt=""
+            />
+            <img
+              style="margin-left: -12px"
+              src="images/user-avatar5.png"
+              alt=""
+            />
+            <img
+              style="margin-left: -12px"
+              src="images/user-avatar6.png"
+              alt=""
+            />
+            <div style="margin-left: -12px" class="hes-avatar-emty">
               <img
-                style="left: 200px"
-                src="images/user-avatar-emty.png"
-                alt=""
-              />
-              <img
-                style="left: 200px; z-index: 1; padding: 15px"
+                style="padding: 15px; display: flex"
                 src="images/plus.png"
                 alt=""
               />
-              <h6>2,500 people booked Tomorrowland Event in last 24 Hours</h6>
             </div>
+            <h6>2,500 people booked Tomorrowland Event in last 24 Hours</h6>
           </div>
         </div>
         <div class="hes-scroll-png">
           <img src="images/scroll.png" alt="" />
-        </div>
-        <div class="hes-little-lines">
-          <img src="images/Rectangle 19293.png" alt="" />
-          <img src="images/Rectangle 19291.png" alt="" />
-          <img src="images/Rectangle 19293.png" alt="" />
         </div>
       </div>
     </div>
