[PR-10] - Deleting Margin 0px of the above Photos

--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="styles/shared.css">
   </head>
   <body>
-    
+    <!-- Muruvvet About Page Hero START-->
+      
+    <!-- Muruvvet About Page Hero END-->
   </body>
 </html>
