First version of explore packages section

--- a/about.html
+++ b/about.html
@@ -8,6 +8,88 @@
     <link rel="stylesheet" href="styles/shared.css">
   </head>
   <body>
-    
+    <!-- Esra Explore Packages Section START-->
+    <div class="about-explore-packages-section">
+      <div class="about-explore-packages-box">
+          <h4 class="about-ep-title-h4">EXPLORE MORE</h4>
+          <h1 class="about-ep-title-h1">Our International Packages</h1>
+      </div>
+      <div class="about-explore-packages-container">
+          <div class="about-city-box">
+              <img src="../images/about/about-city-img-barcelona.png" alt="city tag image">
+              <div class="about-city-text">
+                  <h6>Barcelona</h6>
+                  <h6>$840</h6>
+              </div>
+          </div>
+          <div class="about-city-box span-image">
+              <img src="../images/about/about-city-img-riodejenero.png" alt="city tag image">
+              <div class="about-city-text">
+                  <h6>Rio de Jenero</h6>
+                  <h6>$840</h6>
+              </div>
+              </div>
+              <div class="about-city-box">
+              <img src="../images/about/about-city-img-barcelona02.png" alt="city tag image">
+              <div class="about-city-text">
+                  <h6>Barcelona</h6>
+                  <h6>$840</h6>
+              </div>
+              </div>
+              <div class="about-city-box">
+              <img src="../images/about/about-city-img-tommorowland.png" alt="city tag image">
+              <div class="about-city-text">
+                  <h6>Tommorow Land</h6>
+                  <h6>$840</h6>
+              </div>
+              </div>
+              <div class="about-city-box">
+              <img src="../images/about/about-city-img-losangelas.png" alt="city tag image">
+              <div class="about-city-text">
+                  <h6>Los Angelas</h6>
+                  <h6>$840</h6>
+              </div>
+              </div>
+              <div class="about-city-box">
+              <img src="../images/about/about-city-img-tommorowland.png" alt="city tag image">
+              <div class="about-city-text">
+                  <h6>India</h6>
+                  <h6>$840</h6>
+              </div>
+              </div>
+              <div class="about-city-box">
+              <img src="../images/about/about-city-img-barcelona03.png" alt="city tag image">
+              <div class="about-city-text">
+                  <h6>Barcelona</h6>
+                  <h6>$840</h6>
+              </div>
+              </div>
+              <div class="about-city-box">
+              <img src="../images/about/about-city-img-maldives.png" alt="city tag image">
+              <div class="about-city-text">
+                  <h6>Maldives</h6>
+                  <h6>$840</h6>
+              </div>
+              </div>
+              <div class="about-city-box">
+              <img src="../images/about/about-city-img-barcelona04.png" alt="city tag image">
+              <div class="about-city-text">
+                  <h6>Barcelona</h6>
+                  <h6>$840</h6>
+              </div>
+              </div>
+              <div class="about-city-box">
+              <img src="../images/about/about-city-img-losangelas.png" alt="city tag image">
+              <div class="about-city-text">
+                  <h6>Pakistan</h6>
+                  <h6>$840</h6>
+              </div>
+              </div>
+          </div>
+          </div>
+
+      </div>
+  </div>
+  <!-- Esra Explore Packages Section END-->
   </body>
 </html>
