--- a/about.html
+++ b/about.html
@@ -6,8 +6,34 @@
     <title>Tour and Travel About</title>
     <link rel="stylesheet" href="styles/about.css">
     <link rel="stylesheet" href="styles/shared.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Yesteryear&display=swap"/>
   </head>
   <body>
-    
+    <!-- Muruvvet Header Hero Start-->
+    <div class="about-page-hero">
+      <div class="hero-container">
+        <div class="h-top-nav-bar">
+          <img class="tnb-logo" src="images/logo.png" alt="Logo">
+          <ul class="tnb-nav-bar">
+            <li><a href="#"></a>Home</li>
+            <li><a href="#"></a>About</li>
+            <li><a href="#"></a>Services</li>
+            <li><a href="#"></a>Upcoming Packages</li>
+          </ul>
+            <button class="tnb-get-in-touch">Get In Touch</button>
+        </div>
+        <div class="h-middle-script">
+            <p class="ms-read">READ</p>
+            <p class="ms-about-us">About Us</p>
+        </div>
+      </div>
+    </div>
+    <!-- Muruvvet Header Hero End-->
   </body>
 </html>
