--- a/about.html
+++ b/about.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="styles/shared.css">
   </head>
   <body>
-    
+    <div class="about-tour-plans">
+      <img src="images/about/about-trend-img.png" alt="about-trend-img" class="about-trend-img">
+      <div class="trend">
+        <p style="size: 18px; color: #DF6951;">TREND</p>
+        <h1 style="size: 50px; color: #181E4B;">our populer tour plans</h1>
+        <p style="size: 16px;">Et labore harum non nobis ipsum eum molestias mollitia et 
+          corporis praesentium a laudantium. Et labore harum non
+           nobis ipsum eum molestias mollitia et corporis praesentium a laudantium.</p>
+      </div>
+        <img src="images/about/about-trend-shell-img.png" alt="">
+      <div class="group">
+        <img src="images/about/about-statistic-img01.png" alt="">
+        <img src="images/about/about-statistic-img02.png" alt="">
+        <img src="images/about/about-statistic-img03.png" alt="">
+      </div>
+    </div>
   </body>
 </html>
