--- a/about.html
+++ b/about.html
@@ -4,25 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tour and Travel About</title>
-    <link rel="stylesheet" href="styles/about.css">
-    <link rel="stylesheet" href="styles/shared.css">
+    <link rel="stylesheet" href="styles/about.css" />
+    <link rel="stylesheet" href="styles/shared.css" />
   </head>
   <body>
-    <div class="about-tour-plans">
-      <img src="images/about/about-trend-img.png" alt="about-trend-img" class="about-trend-img">
-      <div class="trend">
-        <p style="size: 18px; color: #DF6951;">TREND</p>
-        <h1 style="size: 50px; color: #181E4B;">our populer tour plans</h1>
-        <p style="size: 16px;">Et labore harum non nobis ipsum eum molestias mollitia et 
-          corporis praesentium a laudantium. Et labore harum non
-           nobis ipsum eum molestias mollitia et corporis praesentium a laudantium.</p>
+    <section class="about-tour-plans-section">
+      <div class="about-tour-plans">
+        <img
+          src="images/about/about-trend-img.png"
+          alt="about-trend-img"
+          class="about-trend-img"
+        />
+        <div class="trend-container">
+          <h2 class="trend-container-title">TREND</h2>
+          <h3 class="trend-container-header">our populer tour plans</h3>
+          <p class="trend-container-description">
+            Et labore harum non nobis ipsum eum molestias mollitia et corporis
+            praesentium a laudantium. Et labore harum non nobis ipsum eum
+            molestias mollitia et corporis praesentium a laudantium.
+          </p>
+        </div>
+
+        <div class="trend-shell">
+          <img src="images/about/about-trend-shell-img.png" alt="" />
+        </div>
+        <div class="group">
+          <img src="images/about/about-statistic-img01.png" alt="" />
+          <img src="images/about/about-statistic-img02.png" alt="" />
+          <img src="images/about/about-statistic-img03.png" alt="" />
+        </div>
       </div>
-        <img src="images/about/about-trend-shell-img.png" alt="">
-      <div class="group">
-        <img src="images/about/about-statistic-img01.png" alt="">
-        <img src="images/about/about-statistic-img02.png" alt="">
-        <img src="images/about/about-statistic-img03.png" alt="">
-      </div>
-    </div>
+    </section>
   </body>
 </html>
