[PR-12] - Button size fixed.

--- a/about.html
+++ b/about.html
@@ -18,12 +18,12 @@
     <div class="about-promotion">
       <div class="about-promotion-container">
         <div class="pro-title-box">
-          <h6>Promotion</h6>
-          <h2>
+          <h6 class="pro-subtitle">Promotion</h6>
+          <h2 class="pro-title">
             We Provide You Best <br />
             Europe Sightseeing Tours
           </h2>
-          <p>
+          <p class="pro-paragraph">
             Et labore harum non nobis ipsum eum molestias mollitia et corporis
             <br />
             praesentium a laudantium internos. Non quis eius quo eligendi
@@ -32,10 +32,14 @@
             et fugiat nulla qui soluta recusandae in maxime quasi aut ducimus<br />
             illum aut optio quibusdam!
           </p>
-          <button><a href="">View Packages</a></button>
+          <button class="pro-button"><a href="">View Packages</a></button>
         </div>
         <div class="pro-img">
-          <img src="images/about/about-context-img01.png" alt="" />
+          <img
+            class="pro-inside-img"
+            src="images/about/about-context-img01.png"
+            alt=""
+          />
         </div>
       </div>
     </div>
