last revision of tour package section-added object-fit&some other revisions

--- a/index.html
+++ b/index.html
@@ -15,6 +15,24 @@
   </head>
 
   <body>
+    <div class="homepage-partners-section">
+      <div class="homepage-partners-section-container">
+        <div class="ps-logo">
+          <img src="./images/partner-logo1.png" alt="" class="ps-slide-image">
+          <img src="./images/partner-logo2.png" alt="" class="ps-slide-image">
+          <img src="./images/partner-logo3.png" alt="" class="ps-slide-image">
+          <img src="./images/partner-logo4.png" alt="" class="ps-slide-image">
+          <img src="./images/partners-logo5.png" alt="" class="ps-slide-image">
+        </div>
+        <div class="ps-logo">
+          <img src="./images/partner-logo1.png" alt="" class="ps-slide-image">
+          <img src="./images/partner-logo2.png" alt="" class="ps-slide-image">
+          <img src="./images/partner-logo3.png" alt="" class="ps-slide-image">
+          <img src="./images/partner-logo4.png" alt="" class="ps-slide-image">
+          <img src="./images/partners-logo5.png" alt="" class="ps-slide-image">
+        </div>
+      </div>
+    </div>
     <!-- Esra Best Servicess Start-->
     <div class="homepage-best-services">
       <div class="homepage-best-services-container">
@@ -108,8 +126,8 @@
                 >View Packages</a
               >
             </button>
-
           </div>
+        </div>
       </div>
     </div>
     <!-- Erkin Honeymoon Specials End-->
@@ -225,10 +243,11 @@
     </div>
     <!-- erkin explore section END-->
     <!-- esra homepage tour package START-->
-      <div class="homepage-tour-package-container">
-        <h5 class="tp-h5">TRENDY</h5>
-        <h2 class="tp-h2">Our Trending Tour Packages</h2>
-      </div>
+    <div class="homepage-tour-package-container">
+      <h5 class="tp-h5">TRENDY</h5>
+      <h2 class="tp-h2">Our Trending Tour Packages</h2>
+
+    
       <div class="homepage-tour-package-container-box">
           <div class="tp-box">
             <div class="tp-box-images"> 
@@ -237,11 +256,11 @@
             </div>
             <div class="tp-spans-box">
               <span class="tp-box-spans">
-                <img src="images/hometour-packages-calender-icon.png" alt="calender icon">
+                <img src="images/hometour-packages-calender-icon.png"  alt="calender icon">
                 <p>8 days</p>
               </span>
               <span class="tp-box-spans">
-                <img src="images/hometour-packages-user-icon.png" alt="user icon">
+                <img src="images/hometour-packages-user-icon.png" style="object-fit: contain;" alt="user icon">
                 <p>25 People going</p>
               </span>
             </div>
@@ -263,6 +282,7 @@
               <h4>1,000 $</h4>
               <h5>1,200 $</h5>
             </div>
+
             <p class="tp-box-p">Nam exercitationem commodi et ducimus quia in dolore<br>
               animi sit mollitia amet id quod eligendi. Et labore harum<br> 
               non nobis ipsum eum molestias mollitia et corporis<br>
@@ -280,7 +300,7 @@
                 <p>8 days</p>
               </span>
               <span class="tp-box-spans">
-                <img src="images/hometour-packages-user-icon.png" alt="user icon">
+                <img src="images/hometour-packages-user-icon.png" style="object-fit: contain;" alt="user icon">
                 <p>30 People going</p>
               </span>
             </div>
@@ -319,13 +339,14 @@
                 <p>8 days</p>
               </span>
               <span class="tp-box-spans">
-                <img src="images/hometour-packages-user-icon.png" alt="user icon">
+                <img src="images/hometour-packages-user-icon.png" style="object-fit: contain;" alt="user icon">
                 <p>155 People going</p>
               </span>
             </div>
             <div class="tp-box-title">
               <h4>Giza</h4>
               <span class="tp-box-spans-star">
+
                 <img src="images/hometour-packages-star-img.png" alt="star icon">
                 <img src="images/hometour-packages-star-img.png" alt="star icon">
                 <img src="images/hometour-packages-star-img.png" alt="star icon">
@@ -346,7 +367,8 @@
               non nobis ipsum eum molestias mollitia et corporis<br>
               praesentium a laudantium internos.</p>
             <a class="tp-box-button" href="#">Explore Now</a>
-       </div>
+          </div>
+      </div>
     </div>
     <!-- esra homepage tour package END-->
   </body>
