some revisions after lesson

--- a/about.html
+++ b/about.html
@@ -16,78 +16,82 @@
       </div>
       <div class="about-explore-packages-container">
           <div class="about-city-box">
-              <img src="../images/about/about-city-img-barcelona.png" alt="city tag image">
+              <img src="../images/about/about-city-img-barcelona.png" class="about-ep-image" alt="city tag image">
               <div class="about-city-text">
                   <h6>Barcelona</h6>
                   <h6>$840</h6>
               </div>
           </div>
-          <div class="about-city-box span-image">
-              <img src="../images/about/about-city-img-riodejenero.png" alt="city tag image">
+          <div class="about-city-box">
+              <img src="../images/about/about-city-img-switzerland.png" class="about-ep-image" alt="city tag image">
+              <div class="about-city-text">
+                  <h6>Switzerland</h6>
+                  <h6>$840</h6>
+              </div>
+              </div>
+              <div class="about-city-box span-image">
+              <img src="../images/about/about-city-img-riodejenero.png" class="about-ep-image" alt="city tag image">
               <div class="about-city-text">
                   <h6>Rio de Jenero</h6>
                   <h6>$840</h6>
               </div>
               </div>
               <div class="about-city-box">
-              <img src="../images/about/about-city-img-barcelona02.png" alt="city tag image">
+              <img src="../images/about/about-city-img-barcelona02.png" class="about-ep-image" alt="city tag image">
               <div class="about-city-text">
                   <h6>Barcelona</h6>
                   <h6>$840</h6>
               </div>
               </div>
               <div class="about-city-box">
-              <img src="../images/about/about-city-img-tommorowland.png" alt="city tag image">
+              <img src="../images/about/about-city-img-tommorowland.png" class="about-ep-image" alt="city tag image">
               <div class="about-city-text">
                   <h6>Tommorow Land</h6>
                   <h6>$840</h6>
               </div>
               </div>
               <div class="about-city-box">
-              <img src="../images/about/about-city-img-losangelas.png" alt="city tag image">
+              <img src="../images/about/about-city-img-losangelas.png" class="about-ep-image" alt="city tag image">
               <div class="about-city-text">
-                  <h6>Los Angelas</h6>
+                  <h6>Los Angelos</h6>
                   <h6>$840</h6>
               </div>
               </div>
               <div class="about-city-box">
-              <img src="../images/about/about-city-img-tommorowland.png" alt="city tag image">
+              <img src="../images/about/about-city-img-tommorowland.png" class="about-ep-image" alt="city tag image">
               <div class="about-city-text">
-                  <h6>India</h6>
+                  <h6>Tommorow Land</h6>
                   <h6>$840</h6>
               </div>
               </div>
               <div class="about-city-box">
-              <img src="../images/about/about-city-img-barcelona03.png" alt="city tag image">
+              <img src="../images/about/about-city-img-barcelona03.png" class="about-ep-image" alt="city tag image">
               <div class="about-city-text">
                   <h6>Barcelona</h6>
                   <h6>$840</h6>
               </div>
               </div>
               <div class="about-city-box">
-              <img src="../images/about/about-city-img-maldives.png" alt="city tag image">
+              <img src="../images/about/about-city-img-maldives.png" class="about-ep-image" alt="city tag image">
               <div class="about-city-text">
                   <h6>Maldives</h6>
                   <h6>$840</h6>
               </div>
               </div>
               <div class="about-city-box">
-              <img src="../images/about/about-city-img-barcelona04.png" alt="city tag image">
+              <img src="../images/about/about-city-img-barcelona04.png" class="about-ep-image" alt="city tag image">
               <div class="about-city-text">
                   <h6>Barcelona</h6>
                   <h6>$840</h6>
               </div>
               </div>
               <div class="about-city-box">
-              <img src="../images/about/about-city-img-losangelas.png" alt="city tag image">
-              <div class="about-city-text">
-                  <h6>Pakistan</h6>
-                  <h6>$840</h6>
-              </div>
-              </div>
-          </div>
-          </div>
-
+                <img src="../images/about/about-city-img-switzerland.png" class="about-ep-image" alt="city tag image">
+                <div class="about-city-text">
+                    <h6>Switzerland</h6>
+                    <h6>$840</h6>
+                </div>
+                </div>
       </div>
   </div>
   <!-- Esra Explore Packages Section END-->
