--- a/index.html
+++ b/index.html
@@ -15,6 +15,32 @@
   </head>
 
   <body>
+    <div class="homepage-partners-section">
+      <div class="homepage-partners-section-container">
+        <div class="ps-logo">
+          <img src="./images/partner-logo1.png" alt="" class="ps-slide-image" />
+          <img src="./images/partner-logo2.png" alt="" class="ps-slide-image" />
+          <img src="./images/partner-logo3.png" alt="" class="ps-slide-image" />
+          <img src="./images/partner-logo4.png" alt="" class="ps-slide-image" />
+          <img
+            src="./images/partners-logo5.png"
+            alt=""
+            class="ps-slide-image"
+          />
+        </div>
+        <div class="ps-logo">
+          <img src="./images/partner-logo1.png" alt="" class="ps-slide-image" />
+          <img src="./images/partner-logo2.png" alt="" class="ps-slide-image" />
+          <img src="./images/partner-logo3.png" alt="" class="ps-slide-image" />
+          <img src="./images/partner-logo4.png" alt="" class="ps-slide-image" />
+          <img
+            src="./images/partners-logo5.png"
+            alt=""
+            class="ps-slide-image"
+          />
+        </div>
+      </div>
+    </div>
     <!-- Esra Best Servicess Start-->
     <div class="homepage-best-services">
       <div class="homepage-best-services-container">
@@ -176,13 +202,11 @@
       </div>
     </div>
     <!-- Muruvvet Favorite resorts END-->
-    <!-- Umut Europe Sightseeing Tours START-->
+    <!-- Umut EST START -->
     <div class="homepage-europe-sightseeing-tours">
       <div class="europe-sightseeing-tours-special-container">
-        <div class="est-image-box">
-          <img src="images/est-illustration.png" alt="est-image"/>
-        </div>
         <div class="est-title-box">
+          <img class="est-illustration" src="images/est-illustration.png" alt="est-image"/>
           <h6 class="est-subtitle">
             PROMOTION
           </h6>
@@ -196,9 +220,7 @@
             illum aut otio quibusdam!
           </p>
           <div>
-            <button class="est-button">View Packages
-
-            </button>
+            <button class="est-button">View Packages</button>
           </div>
           <div class="Destination-image-box">
             <img src="images/Destination 1.png" alt="destination-1"> 
@@ -206,11 +228,10 @@
             <img src="images/Destination 3.png" alt="destination-3">
             <img src="images/Destination 4.png" alt="destination-4">
           </div>
-
         </div> 
       </div>
     </div>
-    <!-- Umut Europe Sightseeing Tours END-->
+    <!-- Umut EST END -->
     <!-- erkin explore section START-->
     <div class="homepage-explore-section">
       <div class="explore-section-container">
@@ -259,5 +280,306 @@
       </div>
     </div>
     <!-- erkin explore section END-->
+    <div class="homepage-tour-package-container">
+      <h5 class="tp-h5">TRENDY</h5>
+      <h2 class="tp-h2">Our Trending Tour Packages</h2>
+
+      <div class="homepage-tour-package-container-box">
+        <div class="tp-box">
+          <div class="tp-box-images">
+            <img
+              class="tp-box-image"
+              src="images/hometour-packages-switzerland.png"
+              alt="isviçre image"
+            />
+            <img
+              class="tp-box-flag"
+              src="images/swiss-flag.png"
+              alt="isviçre flag image"
+            />
+          </div>
+          <div class="tp-spans-box">
+            <span class="tp-box-spans">
+              <img
+                src="images/hometour-packages-calender-icon.png"
+                alt="calender icon"
+              />
+              <p>8 days</p>
+            </span>
+            <span class="tp-box-spans">
+              <img
+                src="images/hometour-packages-user-icon.png"
+                style="object-fit: contain"
+                alt="user icon"
+              />
+              <p>25 People going</p>
+            </span>
+          </div>
+          <div class="tp-box-title">
+            <h4>Switzerland</h4>
+            <span class="tp-box-spans-star">
+              <img
+                src="images/hometour-packages-star-img.png"
+                alt="star icon"
+              />
+              <img
+                src="images/hometour-packages-star-img.png"
+                alt="star icon"
+              />
+              <img
+                src="images/hometour-packages-star-img.png"
+                alt="star icon"
+              />
+              <img
+                src="images/hometour-packages-star-img.png"
+                alt="star icon"
+              />
+              <img
+                src="images/hometour-packages-star-img.png"
+                alt="star icon"
+              />
+            </span>
+          </div>
+          <span class="tp-box-spans">
+            <img
+              src="images/hometour-packages-location-icon.png"
+              alt="location icon"
+            />
+            <p>Europe</p>
+          </span>
+          <div class="tp-box-pricings">
+            <h4>1,000 $</h4>
+            <h5>1,200 $</h5>
+          </div>
+
+          <p class="tp-box-p">
+            Nam exercitationem commodi et ducimus quia in dolore<br />
+            animi sit mollitia amet id quod eligendi. Et labore harum<br />
+            non nobis ipsum eum molestias mollitia et corporis<br />
+            praesentium a laudantium internos.
+          </p>
+          <a class="tp-box-button" href="#">Explore Now</a>
+        </div>
+        <div class="tp-box">
+          <div class="tp-box-images">
+            <img
+              class="tp-box-image"
+              src="images/hometour-packages-brazil.png"
+              alt="brazil image"
+            />
+            <img
+              class="tp-box-flag"
+              src="images/brazil-flag.png"
+              alt="brazil flag image"
+            />
+          </div>
+          <div class="tp-spans-box">
+            <span class="tp-box-spans">
+              <img
+                src="images/hometour-packages-calender-icon.png"
+                alt="calender icon"
+              />
+              <p>8 days</p>
+            </span>
+            <span class="tp-box-spans">
+              <img
+                src="images/hometour-packages-user-icon.png"
+                style="object-fit: contain"
+                alt="user icon"
+              />
+              <p>30 People going</p>
+            </span>
+          </div>
+          <div class="tp-box-title">
+            <h4>Amazon</h4>
+            <span class="tp-box-spans-star">
+              <img
+                src="images/hometour-packages-star-img.png"
+                alt="star icon"
+              />
+              <img
+                src="images/hometour-packages-star-img.png"
+                alt="star icon"
+              />
+              <img
+                src="images/hometour-packages-star-img.png"
+                alt="star icon"
+              />
+              <img
+                src="images/hometour-packages-star-img.png"
+                alt="star icon"
+              />
+              <img
+                src="images/hometour-packages-star-img.png"
+                alt="star icon"
+              />
+            </span>
+          </div>
+          <span class="tp-box-spans">
+            <img
+              src="images/hometour-packages-location-icon.png"
+              alt="location icon"
+            />
+            <p>Brazil</p>
+          </span>
+          <div class="tp-box-pricings">
+            <h4>1,223 $</h4>
+            <h5>1,300 $</h5>
+          </div>
+          <p class="tp-box-p">
+            Nam exercitationem commodi et ducimus quia in dolore<br />
+            animi sit mollitia amet id quod eligendi. Et labore harum<br />
+            non nobis ipsum eum molestias mollitia et corporis<br />
+            praesentium a laudantium internos.
+          </p>
+          <a class="tp-box-button" href="#">Explore Now</a>
+        </div>
+        <div class="tp-box">
+          <div class="tp-box-images">
+            <img
+              class="tp-box-image"
+              src="images/hometour-packages-eygpt.png"
+              alt="brazil image"
+            />
+            <img
+              class="tp-box-flag"
+              src="images/egypt-flag.png"
+              alt="brazil flag image"
+            />
+          </div>
+          <div class="tp-spans-box">
+            <span class="tp-box-spans">
+              <img
+                src="images/hometour-packages-calender-icon.png"
+                alt="calender icon"
+              />
+              <p>8 days</p>
+            </span>
+            <span class="tp-box-spans">
+              <img
+                src="images/hometour-packages-user-icon.png"
+                style="object-fit: contain"
+                alt="user icon"
+              />
+              <p>155 People going</p>
+            </span>
+          </div>
+          <div class="tp-box-title">
+            <h4>Giza</h4>
+            <span class="tp-box-spans-star">
+              <img
+                src="images/hometour-packages-star-img.png"
+                alt="star icon"
+              />
+              <img
+                src="images/hometour-packages-star-img.png"
+                alt="star icon"
+              />
+              <img
+                src="images/hometour-packages-star-img.png"
+                alt="star icon"
+              />
+              <img
+                src="images/hometour-packages-star-img.png"
+                alt="star icon"
+              />
+              <img
+                src="images/hometour-packages-star-img.png"
+                alt="star icon"
+              />
+            </span>
+          </div>
+          <span class="tp-box-spans">
+            <img
+              src="images/hometour-packages-location-icon.png"
+              alt="location icon"
+            />
+            <p>Egypt</p>
+          </span>
+          <div class="tp-box-pricings">
+            <h4>1,300 $</h4>
+            <h5>1,450 $</h5>
+          </div>
+          <p class="tp-box-p">
+            Nam exercitationem commodi et ducimus quia in dolore<br />
+            animi sit mollitia amet id quod eligendi. Et labore harum<br />
+            non nobis ipsum eum molestias mollitia et corporis<br />
+            praesentium a laudantium internos.
+          </p>
+          <a class="tp-box-button" href="#">Explore Now</a>
+        </div>
+      </div>
+    </div>
+    <!-- esra homepage tour package END-->
+    <!-- Muruvvet Testimonials Start-->
+    <div class="homepage-testimonials">
+      <div class="testimonials-container">
+        <div class="tc-testimonial-section">
+          <div class="ts-title-box">
+            <div class="tb-subheading">
+              <h4>PROMOTION</h4>
+            </div>
+            <div class="tb-heading">
+              <h4>See What Our Clients Say About Us</h4>
+            </div>
+          </div>
+          <div class="ts-script-box">
+            <img
+              class="sb-designer-image"
+              src="images/testimonial-section-box-pp-img.png"
+              alt="Designer Photo"
+            />
+
+            <div class="sb-writing-box">
+              <p class="wb-paragraph">
+                Vel officiis dolor ea illo aut eligendi ullam non laudantium
+                magnam et recusandae molestiae sit iure unde aut voluptate
+                quaerat. Id sunt provident quo possimus impedit vel doloremque
+                obcaecati qui ullam consectetur et ipsum omnis.
+              </p>
+              <p class="wb-footer">Christine Beckam - Designer</p>
+              <img
+                class="wb-double-quotes"
+                src="images/testimonial-box-quotes.png"
+                alt="Double Quotes"
+              />
+              <img
+                class="wb-small-quotes"
+                src="images/Vector-double-quotes.png"
+                alt="Double Quotes"
+              />
+            </div>
+
+            <div class="sb-left-arrow">
+              <img src="images/arrow-leeft-icon.png" al0t="Left Arrow" />
+            </div>
+
+            <div class="sb-right-arrow">
+              <img src="images/arrow-right-icon.png" alt="Right Arrow" />
+            </div>
+          </div>
+        </div>
+
+        <div class="tc-pagination">
+          <img src="images/Pagination.png" alt="Pagination" />
+        </div>
+      </div>
+      <img
+        class="tc-hat-image"
+        src="images/testimonial-section-hat-img.png"
+        alt="Hat Image"
+      />
+      <img
+        class="tc-seashell-image"
+        src="images/testimonial-section-seashell-img.png"
+        alt="Seashell Image"
+      />
+      <img
+        class="tc-place-image"
+        src="images/testimonial-section-photo-img.png"
+        alt="Place Image"
+      />
+    </div>
+    <!-- Muruvvet Testimonials End-->
   </body>
 </html>
