--- a/about.html
+++ b/about.html
@@ -9,29 +9,42 @@
   </head>
   <body>
     <section class="about-tour-plans-section">
+      <div class="trend-shell">
+        <img src="images/about/about-trend-shell-img.png" alt="" />
+      </div>
       <div class="about-tour-plans">
-        <img
-          src="images/about/about-trend-img.png"
-          alt="about-trend-img"
-          class="about-trend-img"
-        />
-        <div class="trend-container">
-          <h2 class="trend-container-title">TREND</h2>
-          <h3 class="trend-container-header">our populer tour plans</h3>
-          <p class="trend-container-description">
-            Et labore harum non nobis ipsum eum molestias mollitia et corporis
-            praesentium a laudantium. Et labore harum non nobis ipsum eum
-            molestias mollitia et corporis praesentium a laudantium.
-          </p>
+        <div class="about-trend-img-container">
+          <img
+            src="images/about/about-trend-img.png"
+            alt="about-trend-img"
+            class="about-trend-img"
+          />
         </div>
+        <div class="text-and-img">
+          <div class="trend-container">
+            <h2 class="trend-container-title">TREND</h2>
+            <h3 class="trend-container-header">our populer tour plans</h3>
+            <p class="trend-container-description">
+              Et labore harum non nobis ipsum eum molestias mollitia et corporis
+              praesentium a laudantium. Et labore harum non nobis ipsum eum
+              molestias mollitia et corporis praesentium a laudantium.
+            </p>
+          </div>
 
-        <div class="trend-shell">
-          <img src="images/about/about-trend-shell-img.png" alt="" />
-        </div>
-        <div class="group">
-          <img src="images/about/about-statistic-img01.png" alt="" />
-          <img src="images/about/about-statistic-img02.png" alt="" />
-          <img src="images/about/about-statistic-img03.png" alt="" />
+          <div class="group">
+            <div>
+              <img src="images/about/about-statistic-img01.png" alt="" />
+              <p>vacations</p>
+            </div>
+            <div>
+              <img src="images/about/about-statistic-img02.png" alt="" />
+              <p>moneymoon</p>
+            </div>
+            <div>
+              <img src="images/about/about-statistic-img03.png" alt="" />
+              <p>musical events</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
