--- a/about.html
+++ b/about.html
@@ -13,20 +13,29 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Yesteryear&display=swap"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Flow+Circular&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Yesteryear&display=swap">
   </head>
   <body>
     <!-- Muruvvet Header Hero Start-->
     <div class="about-page-hero">
       <div class="hero-container">
         <div class="h-top-nav-bar">
-          <img class="tnb-logo" src="images/logo.png" alt="Logo">
-          <ul class="tnb-nav-bar">
-            <li><a href="#"></a>Home</li>
-            <li><a href="#"></a>About</li>
-            <li><a href="#"></a>Services</li>
-            <li><a href="#"></a>Upcoming Packages</li>
-          </ul>
-            <button class="tnb-get-in-touch">Get In Touch</button>
+          <div class="tnb-logo" >
+            <img src="images/logo.png" alt="Logo">
+          </div>
+          <div class="tnb-nav-bar">
+            <!-- <div class="nb-nav-elements"> -->
+              <ul class="nb-nav-elements">
+                <li><a href="#"></a>Home</li>
+                <li><a href="#"></a>About</li>
+                <li><a href="#"></a>Services</li>
+                <li><a href="#"></a>Upcoming Packages</li>
+              </ul>
+            <!-- </div> -->
+            <div class="nb-button">
+              <a href="#">Get In Touch</a>
+            </div>
+          </div>
         </div>
         <div class="h-middle-script">
             <p class="ms-read">READ</p>
